--- a/src/BackendBundle/Resources/translations/messages.fr.yml
+++ b/src/BackendBundle/Resources/translations/messages.fr.yml
@@ -3,3 +3,6 @@ Effacer: 'Effacer'
 Sujet: 'Sujet'
 Répondre: 'Répondre'
 Posté le: 'Posté le'
+Envoyer: 'Envoyer'
+Télécharger: 'Télécharger'
+Mettre à jour le CV: 'Mettre à jour le CV'
