Add recommandation support

--- a/src/BackendBundle/Resources/translations/messages.fr.yml
+++ b/src/BackendBundle/Resources/translations/messages.fr.yml
@@ -6,3 +6,4 @@ Posté le: 'Posté le'
 Envoyer: 'Envoyer'
 Télécharger: 'Télécharger'
 Mettre à jour le CV: 'Mettre à jour le CV'
+Mettre à jour la lettre de Recommandation: 'Mettre à jour la lettre de Recommandation'
